Bug 159231 - korganizer crash clicking on undo (ToDo view)
Summary: korganizer crash clicking on undo (ToDo view)
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-13 10:15 UTC by FiNeX
Modified: 2008-03-13 20:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-03-13 10:15:48 UTC
Version:            (using Devel)
Installed from:    Compiled sources

On the new ToDo list, the undo action make korganizer crash without any backtrace. I've got only some errors on the shell output. I'm using trunk (compiled last monday).


korganizer(4610)/kdepimlibs (kabc) KABC::Lock::lock: -- lock name: "/home/test/.kde4/share/apps/kabc/lock/_home_test_.kde4_share_apps_korganizer_std.ics.lock"
korganizer(4610)/kdepimlibs (kabc) KABC::Lock::lock: -- lock unique name: "/home/test/.kde4/share/apps/kabc/lock/_home_test_.kde4_share_apps_korganizer_std.icsYkQYj7pM"
ASSERT failure in QList<T>::operator[]: "index out of range", file /home/test/KDE4/qt4/include/QtCore/qlist.h, line 401
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: KDirWatchPrivate::removeEntry for "/home/test/.kde4/share/apps/korganizer/income.accepted" sub_entry: 0x0
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Cancelled INotify (fd 13, 2) for "/home/test/.kde4/share/apps/korganizer/income.accepted"
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Removed Dir "/home/test/.kde4/share/apps/korganizer/income.accepted" for "" ["KDirWatch-2"]
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: KDirWatchPrivate::removeEntry for "/home/test/.kde4/share/apps/korganizer/income.cancel" sub_entry: 0x0
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Cancelled INotify (fd 13, 5) for "/home/test/.kde4/share/apps/korganizer/income.cancel"
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Removed Dir "/home/test/.kde4/share/apps/korganizer/income.cancel" for "" ["KDirWatch-2"]
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: KDirWatchPrivate::removeEntry for "/home/test/.kde4/share/apps/korganizer/income.counter" sub_entry: 0x0
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Cancelled INotify (fd 13, 4) for "/home/test/.kde4/share/apps/korganizer/income.counter"
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Removed Dir "/home/test/.kde4/share/apps/korganizer/income.counter" for "" ["KDirWatch-2"]
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: KDirWatchPrivate::removeEntry for "/home/test/.kde4/share/apps/korganizer/income.delegated" sub_entry: 0x0
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Cancelled INotify (fd 13, 7) for "/home/test/.kde4/share/apps/korganizer/income.delegated"
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Removed Dir "/home/test/.kde4/share/apps/korganizer/income.delegated" for "" ["KDirWatch-2"]
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: KDirWatchPrivate::removeEntry for "/home/test/.kde4/share/apps/korganizer/income.reply" sub_entry: 0x0
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Cancelled INotify (fd 13, 6) for "/home/test/.kde4/share/apps/korganizer/income.reply"
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Removed Dir "/home/test/.kde4/share/apps/korganizer/income.reply" for "" ["KDirWatch-2"]
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: KDirWatchPrivate::removeEntry for "/home/test/.kde4/share/apps/korganizer/income.tentative" sub_entry: 0x0
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Cancelled INotify (fd 13, 3) for "/home/test/.kde4/share/apps/korganizer/income.tentative"
korganizer(4610)/kio (KDirWatch) KDirWatchPrivate::removeEntry: Removed Dir "/home/test/.kde4/share/apps/korganizer/income.tentative" for "" ["KDirWatch-2"]
kDebugStream called after destruction (from virtual KOPrefs::~KOPrefs() file /home/test/KDE4/kdesvn/kdepim/korganizer/koprefs.cpp line 91)

kDebugStream called after destruction (from void KRES::Resource::close() file /home/test/KDE4/kdesvn/kdepimlibs/kresources/resource.cpp line 140)
Closing resource "Default Calendar"
kDebugStream called after destruction (from void KRES::Resource::close() file /home/test/KDE4/kdesvn/kdepimlibs/kresources/resource.cpp line 140)
Closing resource "Birthdays"
Fatal Error: Accessed global static 'KGlobalPrivate *globalData()' after destruction. Defined at /home/test/KDE4/kdesvn/kdelibs/kdecore/kernel/kglobal.cpp:86
kDebugStream called after destruction (from bool KABC::StdAddressBook::Private::saveAll() file /home/test/KDE4/kdesvn/kdepimlibs/kabc/stdaddressbook.cpp line 159)

kDebugStream called after destruction (from KABC::Ticket* KABC::AddressBook::requestSaveTicket(KABC::Resource*) file /home/test/KDE4/kdesvn/kdepimlibs/kabc/addressbook.cpp line 509)

kDebugStream called after destruction (from virtual KABC::Ticket* KABC::ResourceFile::requestSaveTicket() file /home/test/KDE4/kdesvn/kdepimlibs/kabc/plugins/file/resourcefile.cpp line 133)

Fatal Error: Accessed global static 'KGlobalPrivate *globalData()' after destruction. Defined at /home/test/KDE4/kdesvn/kdelibs/kdecore/kernel/kglobal.cpp:86
Comment 1 Thomas Thrainer 2008-03-13 20:09:33 UTC
SVN commit 785310 by thrainer:

Fixed crash when reloading the view.

Implemented popup-actions "purge completed", "make sub-todo independent" and "make this sub-todo independent"

BUG: 159231


 M  +20 -53    kotodomodel.cpp  
 M  +1 -2      kotodomodel.h  
 M  +10 -22    kotodoview.cpp  
 M  +8 -5      kotodoview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=785310