Fixed crash when reloading the view.

Implemented popup-actions "purge completed", "make sub-todo independent" and "make this sub-todo independent"

BUG: 159231

svn path=/trunk/KDE/kdepim/; revision=785310